2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Style fix of the fileupload.
	Ticket #2376.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/js/integria_inventory.js: Fixed an anoying effect
	when navigating through the inventory tree.
	
	* operation/inventories/inventory_search.php: Now some
	inventory items are shown properly when their 'id_object_type'
	is 'NULL'.
	
	* include/functions_inventories.php: Improved the result output
	of the function 'inventories_get_info'.
	
2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Added a new table style.

2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/inventories/inventory_search.php,
	  include/js/integria_inventory.js,
	  include/ajax/inventories.php,
	  include/functions_inventories.php: Added code to handle
	the new module for unfo boxes into the inventory tree view.

2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/js/fixed-bottom-box.js,
	  include/styles/fixed-bottom-box.css: Added a new
	universal module to handle the info boxes.

2015-08-20  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_api.php: Changed 
	'api_create_incident_workunit'.

2015-08-18  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria.centos.spec
	  integria.spec
	  integria_demo.sql
	  DEBIAN/control
	  extras/build_vars.sh: Updated version.


2015-08-18  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql: Updated minor release.

	* include/functions_api.php: Changes in function
	api_ovo_manager.

2015-08-18  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_db.php
	  include/integria_cron.php
	  operation/slas/sla_detail.php: Added
	third party SLA.
	
	* extras/mr/25.sql: Added file.

2015-08-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* install.php
	  include/config.inc.php
	  include/config_process.php: Modified build