@@ -1418,11 +1418,8 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 	$MACROS["_resolution_"] = $resolution;
 	$MACROS["_time_used_"] = $timeused;
 	$MACROS["_incident_main_text_"] = $description;
-	if ($config['access_public'] == '') {
-		$access_dir = $config["base_url"];
-	} else {
-		$access_dir = $config['access_public'];
-	}
+	
+	$access_dir = empty($config['access_public']) ? $config["base_url"] : $config['public_url'];
 	$MACROS["_access_url_"] = $access_dir."/index.php?sec=incidents&sec2=operation/incidents/incident_dashboard_detail&id=$id_inc";
 	$MACROS["_incident_epilog_"] = $row["epilog"];
 	$MACROS["_incident_closed_by_"] = $row["closed_by"];
